--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Character-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Character-Strings.json
@@ -1,13 +1,13 @@
 {
   "DarkestMod:DefaultCharacter": {
     "NAMES": [
-      "The Ancestor",
-      "the Default"
+      "Reynauld & Dismas",
+      "Reynauld and Dismas"
     ],
     "TEXT": [
-      "You still foolishly consider yourself an entity separate from the whole, I know better. And I. Will. Show you.",
-      "NL You TOUCH the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~basic~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "There is a great horror beneath the manor: NL A Crawling Chaos that must be destroyed!",
+      "NL You STRIKE the heart.",
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The oldest among them steps forward  and extends a long, pale hand towards you. NL ~You still foolishly consider yourself an entity separate from the whole, I know better. And I. Will. Show you."
     ]
   }
 }
