--- a/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/src/main/resources/DarkestModResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -1,13 +1,13 @@
 {
   "DarkestMod:StressRelic": {
-    "NAME": "Stress Builds.",
-    "FLAVOR": "The Stress overwhelms.",
+    "NAME": "Junia's Head.",
+    "FLAVOR": "Injury and despondence set the stage for heroism... or cowardice..",
     "DESCRIPTIONS": [
-      "At the beginning of combat gain #b1 Stress ."
+      "Tracks Stress between rounds."
     ]
   },
   "DarkestMod:TorchLightRelic": {
-    "NAME": "Torch Light Relic",
+    "NAME": "Torch Light",
     "FLAVOR": "The way is lit. The path is clear. We require only the strength to follow it.",
     "DESCRIPTIONS": [
       "At the beginning of combat gain #b1 Light ."
